--- a/app/src/main/res/navigation/start_navigation.xml
+++ b/app/src/main/res/navigation/start_navigation.xml
@@ -28,8 +28,8 @@
         android:name="com.example.cleanwater_project.presentation.start.LoginFragment"
         android:label="LoginFragment">
         <action
-            android:id="@+id/action_loginFragment_to_mainFragment"
-            app:destination="@id/mainFragment"
+            android:id="@+id/action_loginFragment_to_versionSelectionFragment"
+            app:destination="@id/versionSelectionFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
@@ -42,7 +42,21 @@
         android:name="com.example.cleanwater_project.presentation.start.RegistrationFragment"
         android:label="RegistrationFragment">
         <action
-            android:id="@+id/action_registrationFragment_to_mainFragment"
+            android:id="@+id/action_registrationFragment_to_versionSelectionFragment"
+            app:destination="@id/versionSelectionFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@id/start_navigation"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/versionSelectionFragment"
+        android:name="com.example.cleanwater_project.presentation.rest.VersionSelectionFragment"
+        android:label="VersionSelectionFragment">
+        <action
+            android:id="@+id/action_versionSelectionFragment_to_mainFragment"
             app:destination="@id/mainFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
