--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -7,7 +7,15 @@
     <fragment
         android:id="@+id/inputResearchFragment"
         android:name="com.example.cleanwater_project.presentation.main.InputResearchFragment"
-        android:label="InputResearchFragment" />
+        android:label="InputResearchFragment">
+        <action
+            android:id="@+id/action_inputResearchFragment_to_sampleFragment"
+            app:destination="@id/sampleFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
     <fragment
         android:id="@+id/researchFragment"
         android:name="com.example.cleanwater_project.presentation.main.ResearchFragment"
@@ -16,4 +24,34 @@
         android:id="@+id/profileFragment"
         android:name="com.example.cleanwater_project.presentation.main.ProfileFragment"
         android:label="ProfileFragment" />
+    <fragment
+        android:id="@+id/sampleFragment"
+        android:name="com.example.cleanwater_project.presentation.sample.SampleFragment"
+        android:label="SampleFragment">
+        <action
+            android:id="@+id/action_sampleFragment_to_checkResearchFragment"
+            app:destination="@id/checkResearchFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/checkResearchFragment"
+        android:name="com.example.cleanwater_project.presentation.total.CheckResearchFragment"
+        android:label="CheckResearchFragment">
+        <action
+            android:id="@+id/action_checkResearchFragment_to_totalFragment"
+            app:destination="@id/totalFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@id/main_navigation"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/totalFragment"
+        android:name="com.example.cleanwater_project.presentation.total.TotalFragment"
+        android:label="TotalFragment" />
 </navigation>
