--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
     <color name="dark">#3D3D3F</color>
     <color name="blue">#6B84C6</color>
     <color name="sea">#CFDDF8</color>
     <color name="light_sea">#F0F3F9</color>
+    <color name="light_gray">#F5F5F5</color>
+    <color name="text_gray">#878788</color>
 </resources>
