--- a/app/src/main/res/layout/welcome_fragment.xml
+++ b/app/src/main/res/layout/welcome_fragment.xml
@@ -19,7 +19,7 @@
     <View
         android:id="@+id/shape"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="320dp"
         android:background="@drawable/ic_shape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="13dp"
         android:layout_marginEnd="20dp"
         android:text="@string/clean_water"
         android:textAlignment="center"
@@ -58,33 +57,50 @@
         app:layout_constraintTop_toBottomOf="@+id/welcome_text_one" />
 
     <TextView
-        android:id="@+id/registration_button"
-        android:layout_width="match_parent"
+        android:id="@+id/continue_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="23dp"
-        android:text="@string/registration_text"
-        android:textAlignment="center"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/ic_button"
+        android:gravity="center"
+        android:paddingBottom="20dp"
+        android:text="@string/continue_button"
         android:textColor="@color/blue"
         android:textSize="20sp"
         android:textStyle="bold"
         android:typeface="normal"
-        app:layout_constraintBottom_toTopOf="@+id/login_button"
+        app:layout_constraintBottom_toBottomOf="@+id/shape"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/login_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="35dp"
-        android:text="@string/login_text"
-        android:textAlignment="center"
-        android:textColor="@color/blue"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:typeface="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <!--    <TextView-->
+    <!--        android:id="@+id/registration_button"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginBottom="23dp"-->
+    <!--        android:text="@string/registration_text"-->
+    <!--        android:textAlignment="center"-->
+    <!--        android:textColor="@color/blue"-->
+    <!--        android:textSize="20sp"-->
+    <!--        android:textStyle="bold"-->
+    <!--        android:typeface="normal"-->
+    <!--        app:layout_constraintBottom_toTopOf="@+id/login_button"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent" />-->
+
+    <!--    <TextView-->
+    <!--        android:id="@+id/login_button"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginBottom="35dp"-->
+    <!--        android:text="@string/login_text"-->
+    <!--        android:textAlignment="center"-->
+    <!--        android:textColor="@color/blue"-->
+    <!--        android:textSize="16sp"-->
+    <!--        android:textStyle="bold"-->
+    <!--        android:typeface="normal"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
