--- a/app/src/main/res/layout/sample_item.xml
+++ b/app/src/main/res/layout/sample_item.xml
@@ -3,11 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="20dp"
-    android:layout_marginEnd="20dp"
-    android:layout_marginBottom="12dp"
-    android:paddingTop="15dp"
-    android:paddingBottom="12dp"
     app:cardElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,12 +13,14 @@
             android:id="@+id/icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:src="@drawable/ic_insect"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/hydrobiont_image" />
 
         <TextView
             android:id="@+id/animal_name"
@@ -32,7 +29,6 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="30dp"
-            android:text="Ручейники"
             android:textColor="@color/dark"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +41,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="30dp"
-            android:text="Количество: 0"
             android:textColor="@color/text_gray"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
