--- a/app/src/main/res/layout/research_details_fragment.xml
+++ b/app/src/main/res/layout/research_details_fragment.xml
@@ -17,4 +17,51 @@
         app:titleTextAppearance="@style/ToolbarStyle"
         app:titleTextColor="@color/dark" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <fragment
+                android:id="@+id/sample_table_fragment"
+                android:name="com.example.cleanwater_project.presentation.fragments.SampleTableFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <fragment
+                android:id="@+id/main_info_fragment"
+                android:name="com.example.cleanwater_project.presentation.fragments.MainInfoFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toBottomOf="@id/sample_table_fragment" />
+
+            <TextView
+                android:id="@+id/main_info_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="@string/result"
+                android:textColor="@color/dark"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/main_info_fragment" />
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/indices_table_fragment"
+                android:name="com.example.cleanwater_project.presentation.fragments.IndicesTableFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toBottomOf="@id/main_info_text" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
