--- a/app/src/main/res/drawable/ic_plus.xml
+++ b/app/src/main/res/drawable/ic_plus.xml
@@ -1,10 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="30dp"
+    android:height="30dp"
+    android:viewportWidth="30"
+    android:viewportHeight="30">
   <path
-      android:pathData="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
-      android:fillColor="#ffffff"
-      android:fillType="evenOdd"/>
+      android:pathData="M22.5,16.25H16.25V22.5C16.25,23.1875 15.6875,23.75 15,23.75C14.3125,23.75 13.75,23.1875 13.75,22.5V16.25H7.5C6.8125,16.25 6.25,15.6875 6.25,15C6.25,14.3125 6.8125,13.75 7.5,13.75H13.75V7.5C13.75,6.8125 14.3125,6.25 15,6.25C15.6875,6.25 16.25,6.8125 16.25,7.5V13.75H22.5C23.1875,13.75 23.75,14.3125 23.75,15C23.75,15.6875 23.1875,16.25 22.5,16.25Z"
+      android:fillColor="#6B84C6"/>
 </vector>
