--- a/app/src/main/res/layout/research_details_fragment.xml
+++ b/app/src/main/res/layout/research_details_fragment.xml
@@ -53,7 +53,7 @@
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/main_info_fragment" />
 
-            <androidx.fragment.app.FragmentContainerView
+            <fragment
                 android:id="@+id/indices_table_fragment"
                 android:name="com.example.cleanwater_project.presentation.fragments.IndicesTableFragment"
                 android:layout_width="match_parent"
