--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark">#3D3D3F</color>
+    <color name="light_dark">#777779</color>
     <color name="blue">#6B84C6</color>
     <color name="sea">#CFDDF8</color>
     <color name="light_sea">#F0F3F9</color>
